Prevent long sidebar link overflow

--- a/src/themes/shared/_sidebar.css
+++ b/src/themes/shared/_sidebar.css
@@ -80,6 +80,7 @@
     a {
       display: block;
       padding-right: var(--_sidebar-inset);
+      overflow: hidden;
 
       &:has(img, svg) {
         display: flex;
